--- a/BytecodeTranslator/BytecodeTranslator.csproj
+++ b/BytecodeTranslator/BytecodeTranslator.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BytecodeTranslator</RootNamespace>
     <AssemblyName>BytecodeTranslator</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
@@ -77,6 +77,7 @@
     <CodeContractsCacheAnalysisResults>False</CodeContractsCacheAnalysisResults>
     <CodeContractsReferenceAssembly>%28none%29</CodeContractsReferenceAssembly>
     <CodeContractsAnalysisWarningLevel>0</CodeContractsAnalysisWarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -86,6 +87,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -148,49 +150,49 @@
       <Project>{fcd3ac7f-9dfd-46c8-ab1e-09f0b0f16dc5}</Project>
       <Name>ParserHelper</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\CCICodePlex\Ast\Metadata\Samples\ILGarbageCollect\ILGarbageCollect.csproj">
-      <Project>{60CD0C85-1E4A-4068-A4EC-D15B7981A908}</Project>
-      <Name>ILGarbageCollect</Name>
+    <ProjectReference Include="..\..\cci\CoreObjectModel\CodeModel\CodeModel.csproj">
+      <Project>{035fea7f-0d36-4ae4-b694-ec45191b9af2}</Project>
+      <Name>CodeModel</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\CCICodePlex\Ast\Metadata\Sources\MetadataHelper\MetadataHelper.csproj">
+    <ProjectReference Include="..\..\cci\CoreObjectModel\MetadataHelper\MetadataHelper.csproj">
       <Project>{4A34A3C5-6176-49D7-A4C5-B2B671247F8F}</Project>
       <Name>MetadataHelper</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\CCICodePlex\Ast\Metadata\Sources\MetadataModel\MetadataModel.csproj">
+    <ProjectReference Include="..\..\cci\CoreObjectModel\MetadataModel\MetadataModel.csproj">
       <Project>{33CAB640-0D03-43DF-81BD-22CDC6C0A597}</Project>
       <Name>MetadataModel</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\CCICodePlex\Ast\Metadata\Sources\MutableMetadataModel\MutableMetadataModel.csproj">
+    <ProjectReference Include="..\..\cci\CoreObjectModel\MutableMetadataModel\MutableMetadataModel.csproj">
       <Project>{319E151C-8F33-49E7-81C9-30F02F9BA90A}</Project>
       <Name>MutableMetadataModel</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\CCICodePlex\Ast\Metadata\Sources\PdbReader\PdbReader.csproj">
+    <ProjectReference Include="..\..\cci\PDBReaderAndWriter\PdbReader\PdbReader.csproj">
       <Project>{A6A31B03-7C3D-4DE6-AA73-BE88116BC40A}</Project>
       <Name>PdbReader</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\CCICodePlex\Ast\Metadata\Sources\PeReader\PeReader.csproj">
+    <ProjectReference Include="..\..\cci\PEReaderAndWriter\PEReader\PeReader.csproj">
       <Project>{34B9A0CE-DF18-4CBC-8F7A-90C2B74338D5}</Project>
       <Name>PeReader</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\CCICodePlex\Ast\Metadata\Sources\SourceModel\SourceModel.csproj">
+    <ProjectReference Include="..\..\cci\CoreObjectModel\SourceModel\SourceModel.csproj">
       <Project>{4B0054FD-124A-4037-9965-BDB55E6BF389}</Project>
       <Name>SourceModel</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\CCICodePlex\Ast\Sources\CodeModel\CodeModel.csproj">
-      <Project>{035FEA7F-0D36-4AE4-B694-EC45191B9AF2}</Project>
-      <Name>CodeModel</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\CCICodePlex\Ast\Sources\ContractExtractor\ContractExtractor.csproj">
+    <ProjectReference Include="..\..\cci\Converters\ContractExtractor\ContractExtractor.csproj">
       <Project>{0703D916-A881-45E6-A5CD-6BC50E2E30E2}</Project>
       <Name>ContractExtractor</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\CCICodePlex\Ast\Sources\MutableCodeModel\MutableCodeModel.csproj">
+    <ProjectReference Include="..\..\cci\CoreObjectModel\MutableCodeModel\MutableCodeModel.csproj">
       <Project>{319E150C-8F33-49E7-81CA-30F02F9BA90A}</Project>
       <Name>MutableCodeModel</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\CCICodePlex\Ast\Sources\NewILToCodeModel\NewILToCodeModel.csproj">
+    <ProjectReference Include="..\..\cci\Converters\NewILToCodeModel\NewILToCodeModel.csproj">
       <Project>{A555D4CB-F16F-4049-A8CF-180B8A05C755}</Project>
       <Name>NewILToCodeModel</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\cci\Samples\ILGarbageCollect\ILGarbageCollect.csproj">
+      <Project>{60cd0c85-1e4a-4068-a4ec-d15b7981a908}</Project>
+      <Name>ILGarbageCollect</Name>
     </ProjectReference>
     <ProjectReference Include="..\TranslationPlugins\TranslationPlugins.csproj">
       <Project>{8C242D42-9714-440F-884D-F64F09E78C7B}</Project>
